--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="dowBar.html">Stacked Bar Graph</a></li>
-                            <li><a href="xxxx.html">Line Graph</a></li>
+                            <li><a href="line.html">Line Graph</a></li>
                             <li><a href="xxxx.html">Pie Charts</a></li></li>
                         </ul>
                     </li>
@@ -45,6 +45,7 @@
     <div id="map"></div>
     <script type="text/javascript" src="../static/js/config.js"></script>
     <script type="text/javascript" src="../static/js/neighborhoodmap.js"></script>
+    <script type="text/javascript" src="../static/js/raphael.js"></script>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
