--- a/templates/line.html
+++ b/templates/line.html
@@ -17,7 +17,9 @@
 </head>
 <h1>Line Graph with Raphael.js</h1>
 <div id="line-graph" class="line-graph"></div>
+<div id="container"></div> 
+<script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"> </script> 
 <body>
-    
+  <script src="..static/js/line.js"></script> 
 </body>
 </html>
