fixed flask link ref

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="dowBar.html">Stacked Bar Graph</a></li>
+                            <li><a href="/dowBar">Stacked Bar Graph</a></li>
                             <li><a href="line.html">Line Graph</a></li>
                             <li><a href="xxxx.html">Pie Charts</a></li></li>
                         </ul>
