--- a/templates/dowBar.html
+++ b/templates/dowBar.html
@@ -12,13 +12,14 @@
       <!-- bootstrap css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="stylesheet" href="../static/css/d3Style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/static/css/d3Style.css">
 </head>
 <body>
-    <div class="container">
+  <div class="container-fluid">  
+  
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-4">
               <div class="well">
                 <h5>SELECT Neighborhood 1:</h5>
                 <!-- neighborhood1 selection happens here -->
@@ -27,7 +28,8 @@
 
               <div id=bar1></div>
           </div>  
-          <div class="col-md-6">
+
+          <div class="col-md-4">
             <div class="well">
                 <h5>SELECT Neighborhood 2:</h5>
                 <!-- neighborhood2 selection happens here -->
@@ -36,6 +38,15 @@
 
             <div id=bar2></div>
           </div>
+
+          <div class="col-md-3">       
+              <!-- neighborhood map    class="img-responsive" -->
+            <div class="thumbnail"> 
+                <img src="static/images/communityMap.gif"  alt="Minneapolis Neighborhood map" style="width:100px">
+            </div>
+
+          </div>
+
         </div>
     </div>  
 
@@ -50,6 +61,6 @@
     <!-- D3 plugin developed by [Justin Palmer](https://github.com/Caged) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script> 
     <!-- Graph script -->
-    <script src="../static/js/dowBar.js"></script> 
+    <script src="/static/js/dowBar.js"></script> 
 </body>
 </html>
