--- a/templates/dowBar.html
+++ b/templates/dowBar.html
@@ -40,9 +40,9 @@
           </div>
 
           <div class="col-md-3">       
-              <!-- neighborhood map    class="img-responsive" -->
-            <div class="thumbnail"> 
-                <img src="static/images/communityMap.gif"  alt="Minneapolis Neighborhood map" style="width:100px">
+              <!-- neighborhood map    class="img-responsive" style="width:200px" -->
+            <div class="thumbnail img-responsive"> 
+                <img src="static/images/communityMap.gif"  alt="Minneapolis Neighborhood map" >
             </div>
 
           </div>
