updates to index and dowBar with navbar

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
     <title>Minneapolis Neighborhoods</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">    
-    <link rel="stylesheet" href="weather.css">
+    <!-- <link rel="stylesheet" href="weather.css"> -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
@@ -34,7 +34,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="/dowBar">Stacked Bar Graph</a></li>
-                            <li><a href="line.html">Line Graph</a></li>
+                            <li><a href="/line">Line Graph</a></li>
                             <li><a href="xxxx.html">Pie Charts</a></li></li>
                         </ul>
                     </li>
