--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Stops by D.O.W.</title>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-      <!-- bootstrap css -->
-    <!-- Commented out below link because it was causing formatting issues -->
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">    
-      <!-- <link rel="stylesheet" href="weather.css"> -->
+    <title>Traffic Stop Heat Map</title>
+
+    <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <link rel="stylesheet" href="../static/css/style.css" /> -->
+    <meta charset="UTF-8">
+    <meta name="Bootstrap Visualization Dashboard" content="width=device-width">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
+    <title>Traffic Stop Heat Map</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <link rel="stylesheet" href="/static/css/style.css">
-    <link rel="stylesheet" href="/static/css/d3Style.css">
+    <link rel="stylesheet" href="./static/css/style.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">    
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <link rel="stylesheet" href="../static/css/style.css" />
 </head>
+
 <body>
     <nav class="navbar navbar-default">
         <div class="container-fluid">
@@ -44,63 +47,22 @@
                             <li><a href="/line">Line Graph</a></li>
                             <li><a href="xxxx.html">Pie Charts</a></li></li>
                         </ul>
-                        <li>
+                    </li>
+                    <li>
                             <a href="/neighborhoodmap">Neighborhood Map</a>
                         </li>
                         <li>
                             <a href="/map">Heat Map</a>
-                      </li>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-  <div class="container-fluid">  
-  
-        <div class="row">
-          <div class="col-md-4">
-              <div class="well">
-                <h5>SELECT Neighborhood 1:</h5>
-                <!-- neighborhood1 selection happens here -->
-                <select id="selDataset1" onchange="selectChanged(this.value,'1')"></select>
-              </div>
+    <div id="heatmap"></div>
+    <script type="text/javascript" src="../static/js/config.js"></script>
+    <script type="text/javascript" src="../static/js/heatmap.js"></script>
+    <script type="text/javascript" src="../static/js/leaflet-heat.js"></script>
 
-              <div id=bar1></div>
-          </div>  
-
-          <div class="col-md-4">
-            <div class="well">
-                <h5>SELECT Neighborhood 2:</h5>
-                <!-- neighborhood2 selection happens here -->
-                <select id="selDataset2" onchange="selectChanged(this.value,'2')"></select>
-            </div>
-
-            <div id=bar2></div>
-          </div>
-
-          <div class="col-md-3">       
-              <!-- neighborhood map    class="img-responsive" style="width:200px" -->
-            <div class="thumbnail img-responsive"> 
-                <img src="static/images/communityMap.gif"  alt="Minneapolis Neighborhood map" >
-            </div>
-
-          </div>
-
-        </div>
-    </div>  
-
-
-    <!-- plotly script -->
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-      <!-- bootstrap scripts -->
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-      crossorigin="anonymous"></script>
-    <!-- D3 scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
-    <!-- D3 plugin developed by [Justin Palmer](https://github.com/Caged) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script> 
-    <!-- Graph script -->
-    <script src="/static/js/dowBar.js"></script> 
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
