modified index.html with data sources

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,15 +59,22 @@
                                 <img id="summary-image" src="/static/images/MplsSL.jpg" alt="Minneapolis-Image">
                                 
                                 <p>Goal: This project will examine traffic citations of the Minneapolis, MN Police Department. Our analysis aims to identify correlations with gender and the types of citations issued in a given neighborhood. </p>
-    
-                                <p>Data Source: http://opendata.minneapolismn.gov/datasets/police-stop-data</p>
-
-                                <p>Neighborhoods: Neighborhoods.geojson</p>
+                                <h3> Stop Data</h3>
+                                <p>Source: http://opendata.minneapolismn.gov/datasets/police-stop-data</p>
 
                                 <p>Data Elements: OBJECTID |masterIncidentNumber |responseDate |reason |problem |callDisposition |citationIssued |personSearch |vehicleSearch |preRace |race |gender |lat |long |x |y |policePrecinct |neighborhood |lastUpdateDate</p>
 
                                 <p>Metadata: https://www.arcgis.com/home/item.html?id=215b4b543d894750aef86c725b56ee2a</p>
+                                <h3>Neighborhood Borders</h3>
+                                <p>Source:[Neighborhoods.geojson] http://opendata.minneapolismn.gov/datasets/7f88316841ce471faa33c89035fb69e8_0?geometry=-93.728%2C44.886%2C-92.685%2C45.056 </p>
 
+                                <p>Metadata:[Neighborhoods] https://www.arcgis.com/home/item.html?id=7f88316841ce471faa33c89035fb69e8</p>
+
+                                <h3>Population</h3>
+                                <p>Source:[MSP_CSV_2012_2016.csv] http://www.mncompass.org/profiles/neighborhoods/minneapolis-saint-paul</p>
+
+                                <p>Source: 2012-2016 American Community Survey 5-year estimates, adjusted to fit current neighborhood boundaries using the 2010 Census counts. The 5-year estimates represent averages of data collected over that time period.</p>
+                                
                                 <p>Objectives:
 
                                         <li>1. Categorize by problem to highlight key occurrences in specific neighborhoods.</li>
