--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,46 @@
 body {
     padding: 0px;
     margin: 0px;
+    background:#ffffff;
+  }
+.navbar-default .navbar-brand {
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+  }
+  .navbar-default .dropdown-menu {
+    color: white;
+  }
+  .navbar {
+    background-color: rgb(0, 0, 0);
+    /* font-size: 20px;
+    font-weight: bold; */
+    color: white;
+  }
+  .navbar-header{
+    width:500px;
+  
+  }
+  .navbar-toggle {
+    float: right;
+  }
+  .collapsed {
+    float: right;
+  }
+  .content{
+    margin-top:100px;
   }
   
+  #text {
+    line-height: 2em;
+    margin: 3%;
+    font-size: 16px; 
+    background-color: white;
+  }
+  #summary-image {
+    width: 100%;
+    height: 100%;
+  }
   #map,
   body,
   html {
