--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
                 <div class="col-md-12">
                     <div class="graph graph-left>
                         <section id="intro">
-                            <h1>Summary</h1>
+                            <h1>Team_Bostock: Minneapolis Traffic Stop Data Analysis</h1>
                             <hr>
                             <section id="text">
                                 <img id="summary-image" src="/static/images/MplsSL.jpg" alt="Minneapolis-Image">
