--- a/templates/line.html
+++ b/templates/line.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../static/css/d3Style.css">
 </head>
 <h1>Line Graph with Raphael.js</h1>
-<div id="line-graph" class="line-graph"></div>
+<div id="line" class="line"></div>
 <div id="container"></div> 
 <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"> </script> 
 <body>
