--- a/templates/line.html
+++ b/templates/line.html
@@ -20,6 +20,6 @@
 <div id="container"></div> 
 <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"> </script> 
 <body>
-  <script src="..static/js/line.js"></script> 
+  <script src="../static/js/line.js"></script> 
 </body>
 </html>
