comment unused code

--- a/templates/line.html
+++ b/templates/line.html
@@ -76,10 +76,10 @@
         </div>
     </nav> -->
 
-    <div class="container">
-        <!-- <h3>Basic Navbar Example</h3> -->
-        <p></p>
-    </div>
+    <!-- <div class="container"> -->
+    <!-- <h3>Basic Navbar Example</h3> -->
+    <!-- <p></p> -->
+    <!-- </div> -->
     <!--Source for line chart-->
     <script src="../static/js/line.js"></script>
 </body>
