--- a/templates/line.html
+++ b/templates/line.html
@@ -13,6 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
     <script src="https://d3js.org/d3-time.v1.min.js"></script>
     <script src="https://d3js.org/d3-time-format.v2.min.js"></script>
+    <script src="https://d3js.org/d3-selection.v1.js"></script>
     <script src="https://d3js.org/d3.v5.js"></script>
     <!-- <style>
         body {
