--- a/templates/line.html
+++ b/templates/line.html
@@ -84,7 +84,7 @@
     <!-- <p></p> -->
     <!-- </div> -->
     <!--Source for line chart-->
-    <script src="/static/js/line.js"></script>
+    <script src="/static/js/bubble.js"></script>
 </body>
 
 </html>
