--- a/templates/line.html
+++ b/templates/line.html
@@ -5,6 +5,7 @@
     <title>Citations</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/d3Style.css">
@@ -60,7 +61,9 @@
     </nav>
     <div class="container">
         <h1>Citation Count by Neigborhood</h1>
-        <p></p>
+        <br>
+        <br>
+        <!-- <p>The number of citations for each neighborhood are reflected in the above chart.</p> -->
         <p></p>
         <div class="line">
         </div>
@@ -84,7 +87,7 @@
     <!-- <p></p> -->
     <!-- </div> -->
     <!--Source for line chart-->
-    <script src="/static/js/bubble.js"></script>
+    <script src="../static/js/line.js"></script>
 </body>
 
 </html>
