directory references start from /static

--- a/templates/line.html
+++ b/templates/line.html
@@ -60,7 +60,7 @@
         </div>
     </nav>
     <div class="container">
-        <h1>Citation Count by Neigborhood</h1>
+        <h1>Citation Count by Neighborhood</h1>
         <br>
         <br>
         <!-- <p>The number of citations for each neighborhood are reflected in the above chart.</p> -->
@@ -87,7 +87,7 @@
     <!-- <p></p> -->
     <!-- </div> -->
     <!--Source for line chart-->
-    <script src="../static/js/line.js"></script>
+    <script src="/static/js/line.js"></script>
 </body>
 
 </html>
