changed d3.json statement

--- a/templates/line.html
+++ b/templates/line.html
@@ -42,7 +42,7 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="http://127.0.0.1:5000/">Home</a></li>
+                            <li><a href="/">Home</a></li>
                             <li><a href="/dowBar">Stacked Bar Graph</a></li>
                             <li><a href="/line">Line Graph</a></li>
                             <li><a href="xxxx.html">Pie Charts</a></li>
@@ -65,7 +65,7 @@
         <br>
         <!-- <p>The number of citations for each neighborhood are reflected in the above chart.</p> -->
         <p></p>
-        <div class="line">
+        <div id="line">
         </div>
     </div>
     <!-- <nav class="navbar navbar-default">
