--- a/templates/dowBar.html
+++ b/templates/dowBar.html
@@ -56,7 +56,7 @@
         </div>
     </nav>
   <div class="container-fluid">  
-  
+    <h3> Police Stops Displayed by the Day of the Week</h3>
         <div class="row">
           <div class="col-md-4">
               <div class="well">
@@ -87,6 +87,7 @@
           </div>
 
         </div>
+        <a href="/popstop" class="btn btn-info" role="button">Link Button</a>
     </div>  
 
 
