updated line html

--- a/templates/line.html
+++ b/templates/line.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -42,7 +42,7 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="/">Home</a></li>
+                            <!-- <li><a href="/">Home</a></li> -->
                             <li><a href="/dowBar">Stacked Bar Graph</a></li>
                             <li><a href="/line">Line Graph</a></li>
                             <li><a href="xxxx.html">Pie Charts</a></li>
@@ -60,7 +60,7 @@
         </div>
     </nav>
     <div class="container">
-        <h1>Citation Count by Neighborhood</h1>
+        <h1>Citation Count by Month</h1>
         <br>
         <br>
         <!-- <p>The number of citations for each neighborhood are reflected in the above chart.</p> -->
