--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="Bootstrap Visualization Dashboard" content="width=device-width">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Minneapolis Neighborhoods</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="weather.css"> -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
@@ -35,28 +35,29 @@
                         <ul class="dropdown-menu">
                             <li><a href="/dowBar">Stacked Bar Graph</a></li>
                             <li><a href="/line">Line Graph</a></li>
-                            <li><a href="xxxx.html">Pie Charts</a></li></li>
-                        </ul>
+                            <li><a href="piechart.html">Pie Charts</a></li>
+                    </li>
+                    </ul>
                     </li>
                     <li>
-                            <a href="/neighborhoodmap">Neighborhood Map</a>
-                        </li>
-                        <li>
-                            <a href="/map">Heat Map</a>
+                        <a href="/neighborhoodmap">Neighborhood Map</a>
+                    </li>
+                    <li>
+                        <a href="/map">Heat Map</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <div class="container">
-            <div class="row row-grid">
-                <div class="col-md-12">
-                    <div class="graph graph-left>
-                        <section id="intro">
+        <div class="row row-grid">
+            <div class="col-md-12">
+                <div class="graph graph-left>
+                        <section id=" intro ">
                             <h1>Team Bostock: Minneapolis Traffic Stop Data Analysis</h1>
                             <hr>
-                            <section id="text">
-                                <img id="summary-image" src="/static/images/MplsSL.jpg" alt="Minneapolis-Image">
+                            <section id="text ">
+                                <img id="summary-image " src="/static/images/MplsSL.jpg " alt="Minneapolis-Image ">
                                 
                                 <p>Goal: This project will examine traffic citations of the Minneapolis, MN Police Department. Our analysis aims to identify correlations with gender and the types of citations issued in a given neighborhood. </p>
                                 <h3> Stop Data</h3>
@@ -86,12 +87,12 @@
                         </section>
             </div>
     </div>
-    <!-- <div id="map"></div>
-    <script type="text/javascript" src="../static/js/config.js"></script>
-    <script type="text/javascript" src="../static/js/neighborhoodmap.js"></script>
-    <script type="text/javascript" src="../static/js/raphael.js"></script> -->
+    <!-- <div id="map "></div>
+    <script type="text/javascript " src="../static/js/config.js "></script>
+    <script type="text/javascript " src="../static/js/neighborhoodmap.js "></script>
+    <script type="text/javascript " src="../static/js/raphael.js "></script> -->
 </body>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> 
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js " integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous "></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js " integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q " crossorigin="anonymous "></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js " integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa " crossorigin="anonymous "></script> 
 </html>
