change navigation menu

--- a/templates/dowBar.html
+++ b/templates/dowBar.html
@@ -40,9 +40,10 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="/dowBar">Stacked Bar Graph</a></li>
-                            <li><a href="/line">Line Graph</a></li>
-                            <li><a href="xxxx.html">Pie Charts</a></li></li>
+                            <li><a href="/dowBar">Day of Week Bar Graph</a></li>
+                            <li><a href="/line">Citations by Month Graph</a></li>
+                            <li><a href="/pie">Gender Pie Graph</a></li></li>
+                            <li><a href="/popstop">Stop / Population Ratio Graph</a></li></li>
                         </ul>
                         <li>
                             <a href="/neighborhoodmap">Neighborhood Map</a>
@@ -87,7 +88,6 @@
           </div>
 
         </div>
-        <a href="/popstop" class="btn btn-info" role="button">Link Button</a>
     </div>  
 
 
