--- a/templates/popstop.html
+++ b/templates/popstop.html
@@ -40,9 +40,10 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="/dowBar">Stacked Bar Graph</a></li>
-                            <li><a href="/line">Line Graph</a></li>
-                            <li><a href="xxxx.html">Pie Charts</a></li></li>
+                            <li><a href="/dowBar">Day of Week Bar Graph</a></li>
+                            <li><a href="/line">Citations by Moth Graph</a></li>
+                            <li><a href="/pie">Gender Pie Graph</a></li></li>
+                            <li><a href="/popstop">Stop / Population Ratio Graph</a></li></li>
                         </ul>
                         <li>
                             <a href="/neighborhoodmap">Neighborhood Map</a>
