--- a/static/css/d3Style.css
+++ b/static/css/d3Style.css
@@ -2,12 +2,11 @@ body {
     font: 12px Arial;
 }
 
-
-/* path {
+path {
     stroke: steelblue;
     stroke-width: 2;
     fill: none;
-} */
+}
 
 .axis path,
 .axis line {
