--- a/static/css/d3Style.css
+++ b/static/css/d3Style.css
@@ -12,6 +12,19 @@ path {
 .axis line {
     fill: none;
     stroke: grey;
-    stroke-width: 1;
+    stroke-width: 2;
     shape-rendering: crispEdges;
+}
+
+.tooltip {
+    position: absolute;
+    width: 90px;
+    height: 70px;
+    padding: 10px;
+    font: 12px sans-serif;
+    text-align: center;
+    color: white;
+    background: blue;
+    border: 0;
+    border-radius: 10px;
 }
