html check updates popstop

--- a/templates/popstop.html
+++ b/templates/popstop.html
@@ -42,16 +42,17 @@
                         <ul class="dropdown-menu">
                             <li><a href="/dowBar">Day of Week Bar Graph</a></li>
                             <li><a href="/line">Citations by Moth Graph</a></li>
-                            <li><a href="/pie">Gender Pie Graph</a></li></li>
-                            <li><a href="/popstop">Stop / Population Ratio Graph</a></li></li>
+                            <li><a href="/pie">Gender Pie Graph</a></li>
+                            <li><a href="/popstop">Stop / Population Ratio Graph</a></li>
                         </ul>
-                        <li>
-                            <a href="/neighborhoodmap">Neighborhood Map</a>
-                        </li>
-                        <li>
-                            <a href="/map">Heat Map</a>
-                      </li>
                     </li>
+                    <li>
+                        <a href="/neighborhoodmap">Neighborhood Map</a>
+                    </li>
+                    <li>
+                        <a href="/map">Heat Map</a>
+                    </li>
+
                 </ul>
             </div>
         </div>
@@ -84,8 +85,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script> 
     <!-- Graph script -->
     <script src="/static/js/popstop.js"></script> 
-</body>
+
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> 
+</body>
 </html>
