--- a/templates/dowBar.html
+++ b/templates/dowBar.html
@@ -7,87 +7,35 @@
     <title>Stops by D.O.W.</title>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
       <!-- bootstrap css -->
-    <!-- Commented out below link because it was causing formatting issues -->
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">    
-      <!-- <link rel="stylesheet" href="weather.css"> -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
-    <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <link rel="stylesheet" href="/static/css/style.css">
-    <link rel="stylesheet" href="/static/css/d3Style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/d3Style.css">
 </head>
 <body>
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">Minneapolis Police Stop Analysis</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Visualizations
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/dowBar">Day of Week Bar Graph</a></li>
-                            <li><a href="/line">Citations by Month Graph</a></li>
-                            <li><a href="/pie">Gender Pie Graph</a></li>
-                            <li><a href="/popstop">Stop / Population Ratio Graph</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="/neighborhoodmap">Neighborhood Map</a>
-                    </li>
-                    <li>
-                        <a href="/map">Heat Map</a>
-                    </li>
-
-                </ul>
-            </div>
-        </div>
-    </nav>
-  <div class="container-fluid">  
-    <h3> Police Stops Displayed by the Day of the Week</h3>
+    <div class="container">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-6">
               <div class="well">
                 <h5>SELECT Neighborhood 1:</h5>
                 <!-- neighborhood1 selection happens here -->
                 <select id="selDataset1" onchange="selectChanged(this.value,'1')"></select>
               </div>
-              <!-- bar graph 1 displayed here -->
+
               <div id=bar1></div>
           </div>  
-
-          <div class="col-md-4">
+          <div class="col-md-6">
             <div class="well">
                 <h5>SELECT Neighborhood 2:</h5>
                 <!-- neighborhood2 selection happens here -->
                 <select id="selDataset2" onchange="selectChanged(this.value,'2')"></select>
             </div>
-              <!-- bar graph 2 displayed here -->
+
             <div id=bar2></div>
           </div>
-
-          <div class="col-md-3">       
-              <!-- neighborhood map    -->
-            <div class="thumbnail img-responsive"> 
-                <img src="static/images/communityMap.gif"  alt="Minneapolis Neighborhood map" >
-            </div>
-
-          </div>
-
         </div>
     </div>  
 
@@ -102,10 +50,6 @@
     <!-- D3 plugin developed by [Justin Palmer](https://github.com/Caged) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script> 
     <!-- Graph script -->
-    <script src="/static/js/dowBar.js"></script> 
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> 
+    <script src="../static/js/dowBar.js"></script> 
 </body>
 </html>
