--- a/templates/index.html
+++ b/templates/index.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="Bootstrap Visualization Dashboard" content="width=device-width">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
     <title>Minneapolis Neighborhoods</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="weather.css"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">    
+    <link rel="stylesheet" href="weather.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <link rel="stylesheet" href="/static/css/style.css" />
+    <link rel="stylesheet" href="../static/css/style.css" />
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -24,7 +24,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Minneapolis Police Stop Analysis</a>
+                <a class="navbar-brand" href="index.html">Minneapolis Police Stop Analysis</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
@@ -33,71 +33,21 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                                <li><a href="/dowBar">Day of Week Bar Graph</a></li>
-                                <li><a href="/line">Citations by Month Graph</a></li>
-                                <li><a href="/pie">Neighborhood Pie Graph</a></li>
-                                <li><a href="/popstop">Stop / Population Ratio Graph</a></li>
+                            <li><a href="dowBar.html">Stacked Bar Graph</a></li>
+                            <li><a href="line.html">Line Graph</a></li>
+                            <li><a href="xxxx.html">Pie Charts</a></li></li>
                         </ul>
-                    </li>
-                    <li>
-                        <a href="/neighborhoodmap">Neighborhood Map</a>
-                    </li>
-                    <li>
-                        <a href="/map">Heat Map</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container">
-        <div class="row row-grid">
-            <div class="col-md-12">
-                <div class="graph graph-left">
-                        <section id="intro">
-                            <h1>Team Bostock: Minneapolis Traffic Stop Data Analysis</h1>
-                            <hr>
-                            <section id="text">
-                                <img id="summary-image" src="/static/images/MplsSL.jpg " alt="Minneapolis-Image ">
-                                
-                                <p>Goal: This project will examine traffic citations of the Minneapolis, MN Police Department. Our analysis aims to identify correlations with gender and the types of citations issued in a given neighborhood. </p>
-                                <h3> Stop Data</h3>
-                                <p>Source: http://opendata.minneapolismn.gov/datasets/police-stop-data</p>
-
-                                <p>Data Elements: OBJECTID |masterIncidentNumber |responseDate |reason |problem |callDisposition |citationIssued |personSearch |vehicleSearch |preRace |race |gender |lat |long |x |y |policePrecinct |neighborhood |lastUpdateDate</p>
-
-                                <p>Metadata: https://www.arcgis.com/home/item.html?id=215b4b543d894750aef86c725b56ee2a</p>
-                                <h3>Neighborhood Borders</h3>
-                                <p>Source:[Neighborhoods.geojson] http://opendata.minneapolismn.gov/datasets/7f88316841ce471faa33c89035fb69e8_0?geometry=-93.728%2C44.886%2C-92.685%2C45.056 </p>
-
-                                <p>Metadata:[Neighborhoods] https://www.arcgis.com/home/item.html?id=7f88316841ce471faa33c89035fb69e8</p>
-
-                                <h3>Population</h3>
-                                <p>Source:Minnesota Compass - MINNEAPOLIS-SAINT PAUL NEIGHBORHOODS</p>
-                                <p>[MSP_CSV_2012_2016.csv] http://www.mncompass.org/profiles/neighborhoods/minneapolis-saint-paul</p>
-
-                                <p>Source: 2012-2016 American Community Survey 5-year estimates, adjusted to fit current neighborhood boundaries using the 2010 Census counts. The 5-year estimates represent averages of data collected over that time period.</p>
-                                
-                                <p>Objectives:</p>
-                                    <ul>
-                                        <li>1. Categorize by problem to highlight key occurrences in specific neighborhoods.</li>
-                                        <li>2. Identify how gender impacts whether a citation is received.</li>
-                                        <li>3. Pinpoint what neighborhoods have the highest number of pull overs.</li>
-                                        <li>4. Determine if citations increased towards the end of the month.</li>
-                                        <li>5. Determine if citations vary by the day of the week.</li>
-                                    </ul>
-                            </section>
-                        </section>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- <div id="map "></div>
-    <script type="text/javascript " src="../static/js/config.js "></script>
-    <script type="text/javascript " src="../static/js/neighborhoodmap.js "></script>
-    <script type="text/javascript " src="../static/js/raphael.js "></script> -->
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js " integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js " integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q " crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js " integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa " crossorigin="anonymous"></script> 
+    <div id="map"></div>
+    <script type="text/javascript" src="../static/js/config.js"></script>
+    <script type="text/javascript" src="../static/js/neighborhoodmap.js"></script>
+    <script type="text/javascript" src="../static/js/raphael.js"></script>
 </body>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> 
 </html>
