remove pie chart

--- a/templates/map.html
+++ b/templates/map.html
@@ -48,7 +48,7 @@
                         <ul class="dropdown-menu">
                                 <li><a href="/dowBar">Day of Week Bar Graph</a></li>
                                 <li><a href="/line">Citations by Month Graph</a></li>
-                                <li><a href="/pie">Gender Pie Graph</a></li>
+                                <!-- <li><a href="/pie">Gender Pie Graph</a></li> -->
                                 <li><a href="/popstop">Stop / Population Ratio Graph</a></li>
                         </ul>
                     </li>
