--- a/templates/line.html
+++ b/templates/line.html
@@ -51,7 +51,7 @@
                             <li>
                                 <a href="/dowBar">Day of Week Bar Graph</a></li>
                             <li><a href="/line">Citations by Day of Month Graph</a></li>
-                            <li><a href="/pie">Gender Pie Graph</a></li>
+                            <!-- <li><a href="/pie">Gender Pie Graph</a></li> -->
                             <li><a href="/popstop">Stop / Population Ratio Graph</a></li>
                         </ul>
                     </li>
