--- a/templates/popstop.html
+++ b/templates/popstop.html
@@ -41,7 +41,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="/dowBar">Day of Week Bar Graph</a></li>
-                            <li><a href="/line">Citations by Moth Graph</a></li>
+                            <li><a href="/line">Citations by Month Graph</a></li>
                             <!-- <li><a href="/pie">Gender Pie Graph</a></li> -->
                             <li><a href="/popstop">Stop / Population Ratio Graph</a></li>
                         </ul>
@@ -62,12 +62,12 @@
 
         <div class="row">
                 <div class="col-md-12">
-                    <div id=bar1></div>
+                    <div id=bar3></div>
                 </div>  
         </div>
         <div class="row">
                 <div class="col-md-12">
-                    <div id=bar2></div>
+                    <div id=bar4></div>
                 </div>  
         </div>
         <p>Population Source: 2012-2016 American Community Survey 5-year estimates</p>
