--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -2,10 +2,7 @@
 <html lang="en-us">
 
 <head>
-    <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
-    <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <link rel="stylesheet" href="../static/css/style.css" /> -->
+
     <meta charset="UTF-8">
     <meta name="Bootstrap Visualization Dashboard" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
@@ -40,10 +37,9 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                                <li><a href="/dowBar">Day of Week Bar Graph</a></li>
                                 <li><a href="/line">Citations by Month Graph</a></li>
                                 <!-- <li><a href="/pie">Gender Pie Graph</a></li> -->
-                                <li><a href="/popstop">Stop / Population Ratio Graph</a></li>
+                                <li><a href="/dowBar">Day of Week Bar Graph</a></li>
                         </ul>
                     </li>
                     <li>
@@ -56,10 +52,36 @@
             </div>
         </div>
     </nav>
-    <div id="heatmap"></div>
+
+
+<div id="heatmap"></div>
+
+
+     <!-- Per Capita Stop Bar Graph -->
+<section id="perCapita">
+    <div class="container-fluid">  
+      <h3> Stop Count Per Resident </h3>
+<!-- Residents A - L displayed -->
+      <div class="row">
+              <div class="col-md-12">
+                  <div id=bar3></div>
+              </div>  
+      </div>
+<!-- Residents M-Z displayed -->
+      <div class="row">
+              <div class="col-md-12">
+                  <div id=bar4></div>
+              </div>  
+      </div>
+      <p>Population Source: 2012-2016 American Community Survey 5-year estimates</p>
+      <h3 class = "text-center"> <a href="#top">Back to top</a> </h3>
+    </div>  
+  </section>
+
     <script type="text/javascript" src="/static/js/config.js"></script>
     <script type="text/javascript" src="/static/js/heatmap.js"></script>
     <script type="text/javascript" src="/static/js/leaflet-heat.js"></script>
+
 
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
