--- a/templates/index.html
+++ b/templates/index.html
@@ -58,23 +58,26 @@
                             <section id="text">
                                 <img id="summary-image" src="/static/images/MplsSL.jpg " alt="Minneapolis-Image ">
                                 
-                                <p>Goal: This project will examine traffic citations of the Minneapolis, MN Police Department. Our analysis aims to identify:
+                                <p>Goal: This project will examine traffic citations of the Minneapolis, MN Police Department. 
+                                    Our analysis aims to identify correlations with gender and the number of citations issued 
+                                    in a given neighborhood.
                                     <ol>
-                                        <li> When are traffic stops made within the month? Are there  more stops at the end of the month? </li>
-                                        <li> When are traffic stops made within the week? Do similar neighborhoods have similar patterns? </li> 
-                                        <li> What neighborhoods have the highest number of pull overs? </li>
+                                        <li> Determine if citations increased towards the end of the month </li>
+                                        <li> Determine if citations vary by the day of the week. Do similar neighborhoods have similar patterns? </li> 
+                                        <li> Pinpoint what neighborhoods have the highest number of pull overs.</li>
+                                        <li> Identify how gender impacts whether a citation is received.</li>
                                     </ol>
+                                <h3>Police Stop Data </h3>
+                                <h4><a href="http://opendata.minneapolismn.gov/datasets/police-stop-data">Source</a></h4>
+                                <h4><a href="https://www.arcgis.com/home/item.html?id=215b4b543d894750aef86c725b56ee2a">Metadata</a></h3>
                                 <p>Data Elements: OBJECTID |masterIncidentNumber |responseDate |reason |problem |callDisposition |citationIssued |personSearch |vehicleSearch |preRace |race |gender |lat |long |x |y |policePrecinct |neighborhood |lastUpdateDate</p>
-
-                                <p>Metadata: https://www.arcgis.com/home/item.html?id=215b4b543d894750aef86c725b56ee2a</p>
                                 <h3>Neighborhood Borders</h3>
-                                <p>Source:[Neighborhoods.geojson] http://opendata.minneapolismn.gov/datasets/7f88316841ce471faa33c89035fb69e8_0?geometry=-93.728%2C44.886%2C-92.685%2C45.056 </p>
-
-                                <p>Metadata:[Neighborhoods] https://www.arcgis.com/home/item.html?id=7f88316841ce471faa33c89035fb69e8</p>
+                                <h4><a href="http://opendata.minneapolismn.gov/datasets/7f88316841ce471faa33c89035fb69e8_0?geometry=-93.728%2C44.886%2C-92.685%2C45.056">Source</a></h4>
+                                <h4><a href="https://www.arcgis.com/home/item.html?id=7f88316841ce471faa33c89035fb69e8">Metadata</a></h4>
 
                                 <h3>Population</h3>
-                                <p>Source:Minnesota Compass - MINNEAPOLIS-SAINT PAUL NEIGHBORHOODS</p>
-                                <p>[MSP_CSV_2012_2016.csv] http://www.mncompass.org/profiles/neighborhoods/minneapolis-saint-paul</p>
+                                <p>From Minnesota Compass - MINNEAPOLIS-SAINT PAUL NEIGHBORHOODS</p>
+                                <h4><a href="http://www.mncompass.org/profiles/neighborhoods/minneapolis-saint-paul">Source</a></h4>
 
                                 <p>Source: 2012-2016 American Community Survey 5-year estimates, adjusted to fit current neighborhood boundaries using the 2010 Census counts. The 5-year estimates represent averages of data collected over that time period.</p>
                                 
